# robo-sim2real

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
drivers/: Cargo.toml
drivers/src/: lib.rs  mock.rs  rpi.rs
platform_rpi/: Cargo.toml
platform_rpi/src/: main.rs
r2_core/: Cargo.toml
r2_core/src/: control.rs  hal.rs  lib.rs  model.rs  replay.rs
r2_core/src/control/: controller.rs  mod.rs  pid.rs  safety.rs
sim2d/: Cargo.toml
sim2d/src/: main.rs
specifications/version/: spec_v0.md  v0-planning.text
tests/: control_pid.rs  safety_failsafe.rs
